--- a/FrontApp/ClientApp/src/app/app.component.css
+++ b/FrontApp/ClientApp/src/app/app.component.css
@@ -3,14 +3,25 @@
   .body-content {
     padding-top: 50px;
   }
-  
 }
+
 h1 {
-    color: #369;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 250%;
-  }
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 250%;
+}
+
 body {
   padding-left: 30px;
   margin-left: 30px;
+}
+
+input:invalid + span:after {
+  content: '✖';
+  padding-left: 5px;
+}
+
+input:valid + span:after {
+  content: '✓';
+  padding-left: 5px;
 }
