--- a/FrontApp/ClientApp/src/app/concerts/concerts.component.html
+++ b/FrontApp/ClientApp/src/app/concerts/concerts.component.html
@@ -1,25 +1,11 @@
-<div [hidden]="changing">
-
-    <button type="button" class="btn btn-default" routerLink="/concerts/new" >
-      Создать
-    </button>
- 
-
-  <h2>Concerts!</h2>
-  <!--<ol class="concerts">
-    <li *ngFor="let conc of concerts"
-        [class.selected]="conc === selectedConcert"
-        (click)="onSelect(conc)">
-      <span class="badge">{{hero.id}}</span> {{conc.name}}
-    </li>
-  </ol>-->
+<div [hidden]="changing" style="padding-left: 30px;  margin-left: 30px;">
+  <h2>Список концертов</h2>
+  <button type="button" class="btn btn-default" routerLink="/concerts/new" (click)="messageService.clear()">
+    Создать
+  </button>
 
   <table class="concerts table table-striped">
-
-
     <thead>
-
-
       <tr>
         <td>Исполнитель</td>
         <td>Площадка</td>
@@ -37,9 +23,9 @@
         <td>{{p.perfomerName}}</td>
         <td>{{p.venueName}}</td>
         <td>{{p.venueAddress}}</td>
-        <td>{{p.date}}</td>
+        <td>{{p.date | date:'dd.MM.yyyy HH:mm'}}</td>
         <td>
-          <button type="button" class="btn btn-default" (click)="selectedConcert=p; changing=true;">Изменить</button>
+          <button type="button" class="btn btn-default" (click)="selectedConcert=p; changing=true; messageService.clear()">Изменить</button>
         </td>
       </tr>
 
@@ -53,6 +39,6 @@
 
 
   <app-concert-detail [concertInput]="selectedConcert"></app-concert-detail>
-  <button type="button" class="btn btn-default" (click)="changing=false;">Назад</button>
+  <button type="button" class="btn btn-default" style="margin-left: 70px;" (click)="changing=false; messageService.clear()">Назад</button>
 
 </div>
