--- a/FrontApp/ClientApp/src/app/concerts/concerts.component.html
+++ b/FrontApp/ClientApp/src/app/concerts/concerts.component.html
@@ -25,20 +25,19 @@
         <td>{{p.venueAddress}}</td>
         <td>{{p.date | date:'dd.MM.yyyy HH:mm'}}</td>
         <td>
-          <button type="button" class="btn btn-default" (click)="selectedConcert=p; changing=true; messageService.clear()">Изменить</button>
+          <button type="button" class="btn btn-default" (click)="onSelect(p); changing=true; messageService.clear()">Изменить</button>
         </td>
       </tr>
 
     </tbody>
 
   </table>
-
+  <ngb-pagination [collectionSize]="totalItems" [pageSize]="itemsPerPage" [(page)]="page" [maxSize]="7" [rotate]="true" (pageChange)="loadPage($event)"></ngb-pagination>
 </div>
 
 <div [hidden]="!changing">
 
 
-  <app-concert-detail [concertInput]="selectedConcert"></app-concert-detail>
-  <button type="button" class="btn btn-default" style="margin-left: 70px;" (click)="changing=false; messageService.clear()">Назад</button>
+  <app-concert-detail [concertInput]="selectedConcert" (changed)="onPageChanged($event)"></app-concert-detail>
 
 </div>
