--- a/FrontApp/ClientApp/src/app/concert-detail/concert-detail.component.html
+++ b/FrontApp/ClientApp/src/app/concert-detail/concert-detail.component.html
@@ -1,8 +1,9 @@
 <div class="container">
   <div [hidden]="submitted">
+    <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+
     <h1>Редактирование</h1>
-    <form (ngSubmit)="onSubmit()" ng-show="heroForm.reset();" #heroForm="ngForm">
-      
+    <form (ngSubmit)="onSubmit(heroForm)" #heroForm="ngForm">
       <div class="form-group">
         <label for="perfomer">Исполнитель</label>
         <select class="form-control" id="perfomer"
@@ -11,12 +12,16 @@
                 #perfomer="ngModel">
           <option *ngFor="let pow of fperfomers"
                   [selected]="pow.name===concertInput.perfomerName ? true : null"
-                  [value]="pow.id">{{pow.name}}</option>
+                  [value]="pow.id">
+            {{pow.name}}
+          </option>
         </select>
         <div [hidden]="perfomer.valid || perfomer.pristine" class="alert alert-danger">
           Perfomer is required
         </div>
       </div>
+
+
 
       <div class="form-group">
         <label for="venue">Площадка</label>
@@ -26,7 +31,9 @@
                 #venue="ngModel">
           <option *ngFor="let pow of fvenues"
                   [selected]="pow.name===concertInput.venueName ? true : null"
-                  [value]="pow.id">{{pow.name}}</option>
+                  [value]="pow.id">
+            {{pow.name}}
+          </option>
         </select>
         <div [hidden]="venue.valid || venue.pristine" class="alert alert-danger">
           Venue is required
@@ -45,25 +52,17 @@
         </div>
       </div>
 
-      <button type="submit" class="btn btn-success" [disabled]="!heroForm.form.valid">Submit</button>
+      <button type="submit" class="btn btn-success" [disabled]="
+              (perfomer.pristine && venue.pristine && concertDate.pristine)">
+        Submit
+      </button>
+      <button type="button" class="btn btn-default" (click)="submitted=false; heroForm.reset();changed.emit(false)">Назад</button>
       <br>
-      <!--<button type="button" class="btn btn-default" (click)="newHero(); heroForm.reset()">New Hero</button>-->
     </form>
   </div>
   <div [hidden]="!submitted">
-    <h2>You submitted the following:</h2>
-    <div class="row">
-      <div class="col-xs-3">Исполнитель</div>
-      <div class="col-xs-9">{{ concert.perfomerId }}</div>
+    <h2>Данные успешно изменены</h2>
+      <br>
+      <button type="button" class="btn btn-default" (click)="submitted=false; heroForm.reset(); changed.emit(false)">Назад</button>
     </div>
-    <div class="row">
-      <div class="col-xs-3">Площадка</div>
-      <div class="col-xs-9">{{ concert.venueId }}</div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3">Дата</div>
-      <div class="col-xs-9">{{ concert.date }}</div>
-    </div>
-    <br>
   </div>
-</div>
