--- a/FrontApp/ClientApp/src/app/app.component.html
+++ b/FrontApp/ClientApp/src/app/app.component.html
@@ -1,4 +1,14 @@
 <app-messages></app-messages>
+<header class="esh-app-header">
+  <div class="container">
+    <article class="row">
+      
+     
+      
+
+    </article>
+  </div>
+</header>
 <router-outlet></router-outlet>
 
 
