--- a/FrontApp/ClientApp/src/app/concert-detail/concert-detail.component.html
+++ b/FrontApp/ClientApp/src/app/concert-detail/concert-detail.component.html
@@ -56,7 +56,7 @@
               (perfomer.pristine && venue.pristine && concertDate.pristine)">
         Submit
       </button>
-      <button type="button" class="btn btn-default" (click)="submitted=false; heroForm.reset();changed.emit(false)">Назад</button>
+      <button type="button" class="btn btn-default" style="margin-left:5px" (click)="submitted=false; heroForm.reset();changed.emit(false)">Назад</button>
       <br>
     </form>
   </div>
