--- a/FrontApp/ClientApp/src/app/auth/auth.component.html
+++ b/FrontApp/ClientApp/src/app/auth/auth.component.html
@@ -1,4 +1,4 @@
-<div style="padding-left: 30px;  margin: 30px; padding-right: 700px">
+<div style="padding-left: 30px;  margin: 30px; width:300px;">
   <h2>Login</h2>
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
