--- a/FrontApp/ClientApp/src/app/oauth2/oauth2.component.html
+++ b/FrontApp/ClientApp/src/app/oauth2/oauth2.component.html
@@ -1,4 +1,4 @@
-<div style="padding-left: 30px;  margin: 30px; padding-right: 700px">
+<div style="padding-left: 30px;  margin: 30px; width:300px;">
   <div *ngIf="!redirect">
     <h2>Login(absolutely different page)</h2>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
